--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
+:root {
+  --primary-color: #505aef;
+}
+
+body {
+  color: var(--primary-color);
+  background: snow;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 96vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.login__wrapper {
+  box-shadow: 0px 0px 50px 0px #000000;
+  background: white;
+  width: 100%;
+  max-width: 275px;
+  margin: 0 20px;
+  border-radius: 5px;
+  padding: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login__header {
+  margin-top: 0;
+}
+
+.login__input {
+  padding: 0.3em 0.2em;
+  width: 100%;
+  border: none;
+  border-bottom: 3px solid lightgrey;
+  outline: none;
+  font-size: 1.2em;
+  margin-bottom: 2em;
+}
+
+.login__input:focus {
+  border-color: var(--primary-color);
+}
+
+.login__button,
+.register__button {
+  margin: 0 auto 1em;
+  display: block;
+  padding: 0.5em;
+  min-width: 150px;
+  border-radius: 30px;
+  border: snow 1px solid;
+  background: var(--primary-color);
+  color: snow;
+  font-size: 1.1em;
+  outline: none;
+  cursor: pointer;
+}
+
+.register__button {
+  margin-bottom: 0;
+  border-color: var(--primary-color);
+  background: snow;
+  color: var(--primary-color);
+}
+
+.login__button:disabled,
+.register__button:disabled {
+  opacity: 0.5;
+  cursor: auto;
+}
+
+.error,
+.warning {
+  color: red;
+  font-size: 1.2em;
+  font-weight: bold;
+  height: 60px;
+}
+
+.warning {
+  color: gold;
+  height: auto;
+  margin-bottom: 1em;
+}
+
+.layer {
+  z-index: 50;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: black;
+  opacity: 0.7;
+}
+
+.modal {
+  color: gold;
+  z-index: 100;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
